--- a/frontend/components/index.html
+++ b/frontend/components/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>fintech</title>
+    <title>Clever Coins</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="landingstyles.css" />
@@ -9,7 +9,7 @@
   <body>
     <header id="header">
       <div class="header-content-div">
-        <a href="#home-sec">
+        <a href="./index.html">
           <img
             src="./images/logocc.jpg"
             alt="Company Logo"
