--- a/frontend/components/login.html
+++ b/frontend/components/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Form | Dan Aleko</title>
+  <title>Login Form</title>
   <link rel="stylesheet" href="login.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -11,7 +11,7 @@
   <div class="wrapper">
     <form action="">
       
-      <h1><img src="images/logocc.jpg" height="70" width="170" style="border-radius:1cqmin;"><br>Login</h1>
+      <h1><img src="images/logocc.jpg" height="55" width="200" style="border-radius:1cqmin;"><br>Login</h1>
       <div class="input-box">
         <input type="text" placeholder="Username" required>
         <i class='bx bxs-user'></i>
@@ -31,9 +31,9 @@
         <label><input type="checkbox">Remember Me</label>
         <a href="#">Forgot Password</a>
       </div>
-      <button type="submit" class="btn">Login</button>
+      <button type="submit" class="btn"><a href="./Dashboard.html">Login</a></button>
       <div class="register-link">
-        <p>Dont have an account? <a href="#">Register</a></p>
+        <p>Dont have an account? <a href="./signup.html">Register</a></p>
       </div>
     </form>
   </div>
