Fin tuned webpage

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -11,14 +11,14 @@
       <div class="header-content-div">
         <a href="#">
           <img
-            src="static/images/logocc.jpg"
+            src="static/images/logocc.png"
             alt="Company Logo"
             id="header-img"
         /></a>
         <nav id="nav-bar">
           <a href="documentation" class="nav-link">About</a>
           <a href="#invest" class="nav-link">Our services</a>
-          <a href="signup" class="nav-link">Sign in</a>
+          <a href="signup" class="nav-link">Sign up</a>
           <a href="login" class="nav-link">Log in</a>
         </nav>
       </div>
@@ -52,14 +52,14 @@
           </button>           
           </div>
           <div class="eye-grabber-img">
-            <img src="static/images/landimg.jpg" alt="Image" />
+            <img src="static/images/landimg.png" alt="Image" />
           </div>
         </section>  
     </main>
     <footer>
         <style>
             body {
-              background-image: url('https://www.desktopbackground.org/download/2880x1800/2010/04/17/3405_cool-simple-white-backgrounds-picture-gallery_5120x2880_h.jpg');
+              background: url('/static/images/indexbg.png');
               background-repeat: no-repeat;
               background-attachment: fixed;
               background-size: cover;
