--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -10,7 +10,7 @@
 <body>
   <div class="wrapper">
     <form action="">
-      <h1><img src="/static/images/logocc.jpg" height="55" width="200" style="border-radius:1cqmin;"><br>Login</h1>
+      <h1><img src="/static/images/logocc.png" height="55" width="200" style="border-radius:1cqmin;"><br>Login</h1>
       <div class="input-box">
         <input type="text" placeholder="Username" required>
         <i class='bx bxs-user'></i>
@@ -28,7 +28,7 @@
       <br><br>
       <div class="remember-forgot">
         <label><input type="checkbox">Remember Me</label>
-        <a href="#">Forgot Password</a>
+        <a href="#">Forgot Password?</a>
       </div>
       <button type="submit" class="btn"><a href="./Dashboard.html">Login</a></button>
       <div class="register-link">
