--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -4,7 +4,7 @@
     <title>Clever Coins</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="static/css/landingstyles.css" />
+    <link rel="stylesheet" href="/static/css/landingstyles.css" />
   </head>
   <body>
     <header id="header">
@@ -35,7 +35,7 @@
             Unlock financial freedom with our personalized savings solutions tailored to your goals, to achieve financial milestones         
           </h2>
           <button class="btn" onclick="window.location.href = '/signup';">
-            Sign in for free
+            Sign up for free
           </button>
         </div>
       </section>
@@ -48,7 +48,7 @@
             </h2>
 
             <button class="btn" onclick="window.location.href = '/signup';">
-              Sign in for free
+              Sign up for free
           </button>           
           </div>
           <div class="eye-grabber-img">
