last few commits

--- a/App/templates/stocks.html
+++ b/App/templates/stocks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Investment Suggestions</title>
-    <link rel="stylesheet" href="/App/static/css/stocks.css">
+    <link rel="stylesheet" href="/static/css/stocks.css">
     <style>
         
     </style>
